дизайн главной страницы user

--- a/Kopigrad/Components/App.razor
+++ b/Kopigrad/Components/App.razor
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="Kopigrad.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" href="~/admin.css?v=1.0.1" />
-
+    <link rel="stylesheet" href="~/users.css?v=1.0.1" />
 
 
 
