--- a/Kopigrad/Components/Pages/Admin/Admin.razor
+++ b/Kopigrad/Components/Pages/Admin/Admin.razor
@@ -1,4 +1,4 @@
-﻿@page "/"
+﻿@page "/Admin"
 @layout Layout.Menu.MenuAdminVhod;
 @using Kopigrad.Components.Layout
 @inject Models.KopigradContext DbContext
